dark mode font fixing

--- a/src/Components/Contact/Contact.module.css
+++ b/src/Components/Contact/Contact.module.css
@@ -31,7 +31,7 @@
 
 /* Stili per input[type=text] e select */
 .inputField {
-
+  font-family: 'Poppins';
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
