--- a/src/Components/Gift/Gift.module.css
+++ b/src/Components/Gift/Gift.module.css
@@ -1,6 +1,7 @@
 .gift{
   padding: 4rem 1rem;
   width: 100%;
+  color: var(--on-primary)
 }
 
 .wrapper{
